--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,6 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    scroll-behavior: auto;
-    /*scroll-behavior added */
 }
 
 body {
@@ -17,16 +15,17 @@ header {
     color: #ffffff;
 }
 
-header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-header h1 span {
+mark {
     color: #d9dcd6;
+    background-color: #2a607c;
 }
 
-header nav {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -34,11 +33,11 @@ header nav {
     font-size: 20px;
 }
 
-header nav ul {
+ul {
     list-style-type: none;
 }
 
-header nav ul li {
+li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -61,21 +60,23 @@ main {
     background-position: center;
 }
 
-.search-engine-optimization img, .social-media-marketing img {
+.float-left {
+    float: left;
     margin-right: 25px;
 }
 
-.online-reputation-management img {
+.float-right {
+    float: right;
     margin-left: 25px;
 }
 
-.content {
+section {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -91,18 +92,18 @@ main {
     color: #ffffff;
 }
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand img, .benefit-cost img, .benefit-lead img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing  {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -115,7 +116,7 @@ main {
     max-height: 200px;
 }
 
-.search-engine-optimization h2, .social-media-marketing h2, .online-reputation-management h2 {
+h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -126,7 +127,9 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
+/*footer class replaced with footer*/
 
-footer h2 {
+h4 {
     font-size: 20px;
 }
+/*footer class replaced with footer and h2 replaced with h4 */
