--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,30 @@
 body {
     background-color: #d9dcd6;
 }
+
 /*header element used intead of class*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+}
+
+/*styles all <p> elements*/
+p {
+    font-size: 16px;
+}
+
+/*styles all <a> elements*/
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/*styles all <img> elements*/
+img {
+    max-width: 100%;
+    height: auto;
 }
 /*h1 element used intead of class*/
 h1 {
@@ -63,41 +81,12 @@ section {
     margin-left: 20px;
 }
 
-/*styles all <a> elements*/
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-/*styles all <p> elements*/
-p {
-    font-size: 16px;
-}
-
-/*styles all <img> elements*/
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-/*styles all <aside> elements*/
-aside {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
 /*styles all <h2> elements*/
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/*classes float-left and float-right used for image possitioning*/
+/*classes float-left and float-right used for image possitioning in section*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -118,12 +107,24 @@ h2 {
     color: #ffffff;
 }
 
-/*consolidated selectors, style image elements*/
+/*consolidated selectors with image elements*/
 .search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-/*styles all <h2> elements*/
+/*styles all <aside> elements*/
+aside {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+/*styles all <h3> elements*/
 h3 {
     margin-bottom: 10px;
     text-align: center;
